# stm32mp157_M4_Core_ZephyrRTOS_prj

application/stm32mp157c_dk2/: CMakeLists.txt  prj.conf
application/stm32mp157c_dk2/SoftwareVersion/: SOFTWARE_VERSION  app_version.h
application/stm32mp157c_dk2/User/src/: main.c  main.cpp  test_main.c  ttt_main.c
application/stm32mp157c_dk2/software_version/: SOFTWARE_VERSION  app_version.h  version.cmake
board/stm32mp157c_dk2/: stm32mp157c_dk2.dts
boards/fork_stm32mp157c_dk2/: Kconfig.defconfig  Kconfig.fork_stm32mp157c_dk2  board.yml  fork_stm32mp157c_dk2.dts  fork_stm32mp157c_dk2_defconfig
